<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/Lgreen"


            android:orientation="horizontal"
            android:padding="15dp"
            app:flow_horizontalAlign="start"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="start|left"
                android:contentDescription="@string/menue_b"
                app:srcCompat="@drawable/hut" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/Lgreen" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:contentDescription="@string/profile_p"
                android:onClick="profileClick"
                app:srcCompat="@drawable/ellipse_14__2_"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/white"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@color/Dgreen"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Input Fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_email"
                android:textColor="@color/Dgreen"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/inputfield"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/Dgreen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_password"
                android:textColor="@color/Dgreen"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/inputfield"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/Dgreen" />


            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="376dp"

                android:layout_height="71dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/Dgreen"
                android:fontFamily="@font/inter_bold"
                android:onClick="signUp"
                android:text="@string/login"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>