<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Product">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/Lgreen"


        android:orientation="horizontal"
        android:padding="15dp"
        app:flow_horizontalAlign="start"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|left"
            android:contentDescription="@string/menue_b"
            android:onClick="btnClick"
            app:srcCompat="@drawable/hut" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/Lgreen" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:contentDescription="@string/profile_p"
            android:onClick="profileClick"
            app:srcCompat="@drawable/ellipse_14__2_" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="366dp"
        android:layout_height="619dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/corners"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.469">

        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="63dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="264dp"
                android:layout_height="60dp"

                android:layout_marginRight="15dp"

                android:fontFamily="@font/inter_bold"

                android:text="@string/treatment"
                android:textAlignment="center"
                android:textColor="@color/Dgreen"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="58dp"

                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                app:srcCompat="@drawable/macos_close__1_" />

        </LinearLayout>

        <!-- First Pair of TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/pair_1_text_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="Pair 1 Text 2"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Second Pair of TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/pair_2_text_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/brand_txt"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Third Pair of TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/pair_3_text_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/treatment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/treatment_txt"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Fourth Pair of TextViews -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/calulate"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/crop"
                android:textAlignment="center"
                android:layout_width="232dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputfield"
                android:fontFamily="@font/inter_semibold"
                android:padding="10dp"
                android:hint="@string/enterArea"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/dose"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/group_12" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/group_13" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/group_14" />
        </LinearLayout>

        <Button
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/Dgreen"
            android:fontFamily="@font/inter_bold"
            android:text="@string/procced" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="414dp"
        android:layout_height="87dp"
        android:layout_marginBottom="-20dp"
        android:background="@color/white"
        app:flow_verticalAlign="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.753">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_gravity="end"
            android:background="@drawable/bottom_nav"
            app:menu="@menu/bottomnav">

        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>