<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Solution_Form">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/form_title"
        android:textColor="@color/Dgreen"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.392" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/Lgreen"
        android:orientation="horizontal"

        android:padding="15dp"
        app:flow_horizontalAlign="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|left"
            android:contentDescription="@string/h_button"
            android:onClick="btnClick"
            app:srcCompat="@drawable/hut" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:contentDescription="@string/profile_p"
            android:onClick="profileClick"
            app:srcCompat="@drawable/ellipse_14__2_" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="411dp"
        android:layout_height="301dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366">

        <EditText
            android:id="@+id/editArea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/inputfield"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/field"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edittype"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editArea"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputfield"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/pestColor"
            android:padding="10dp"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/editColor"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/edittype"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputfield"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editColor"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputfield"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/identified"
            android:padding="10dp"
            android:textSize="16sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/procced"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/Dgreen"
        android:fontFamily="@font/inter_bold"
        android:onClick="btnClick"
        android:text="@string/button_text"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.548" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:onClick="btnClick"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.417"
        app:srcCompat="@drawable/macos_close__1_" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="end"
            android:background="@drawable/bottom_nav"
            app:menu="@menu/bottomnav">

        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/procced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.435">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></RadioButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/Y"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginRight="15dp">

        </TextView>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></RadioButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/N"
            android:textAlignment="center"
            android:textSize="14sp">

        </TextView>

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/pestwings"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.045" />


</androidx.constraintlayout.widget.ConstraintLayout>