<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_309"

    tools:context=".Onboarding4">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="277dp"
        android:layout_height="202dp"
        android:fontFamily="@font/inter_bold"
        android:shadowColor="@color/Dgreen"
        android:text="@string/crop_front"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/Lgreen"
        android:fontFamily="@font/inter_bold"
        android:onClick="logClick"
        android:text="@string/login"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />
    

    <Button
        android:id="@+id/signup"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/Lgreen"
        android:fontFamily="@font/inter_bold"
        android:onClick="signClick"
        android:text="@string/button_sign_up"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintEnd_toStartOf=""
        app:layout_constraintVertical_bias="0.331" />

</androidx.constraintlayout.widget.ConstraintLayout>